<resources>

    <!-- Nome do Aplicativo -->
    <string name="app_name">My Books</string>

    <!-- Menu Toolbar -->
    <string name="action_search">Pesquisar</string>
    <string name="action_sort">Menu</string>
    <string name="hint_search_book">Pesquisar livro...</string>
    <string name="action_add_book">Adicionar Livro +</string>
    <string name="menu_name">Nome (A-Z)</string>
    <string name="menu_author">Autor (A-Z)</string>
    <string name="menu_genre">Gênero (A-Z)</string>
    <string name="menu_empty_search">Campo vazio.</string>
    <string name="msg_no_search_results">Nenhum livro foi encontrado.</string>


    <!-- Títulos das telas -->
    <string name="title_home">Home</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_book_details">Detalhes</string>

    <!-- Mensagens dos diálogos -->
    <string name="dialog_message_delete_item">Tem certeza de que deseja excluir este livro?</string>
    <string name="dialog_positive_button_yes">Sim</string>
    <string name="dialog_negative_button_no">Não</string>

    <!-- Mensagens de sucesso e erro -->
    <string name="msg_removed_successfully">Item removido com sucesso!</string>
    <string name="msg_no_books">Nenhum livro encontrado nos seus favoritos!</string>

    <!-- Botões e descrições -->
    <string name="button_remove_book">Remover livro</string>
    <string name="desc_book_image">Imagem de livros</string>

    <!-- Fragment Add Book -->
    <string name="add_book">Adicionar Livro</string>
    <string name="title_add_book">Título do Livro</string>
    <string name="author_add_book">Autor do Livro</string>
    <string name="genre_add_book">Gênero do Livro</string>
    <string name="btn_add_book">Salvar Livro</string>

    <string name="hint_add_book">Digite o título</string>
    <string name="hint_author_add_book">Digite o autor</string>


</resources>